--- a/main.css
+++ b/main.css
@@ -29,7 +29,50 @@ p {
     text-align: center;
 }
 
-.searchButton {
-    
+p {
+    padding: 0;
+    margin: 0;
 }
 
+#searchButton {
+    height: 50px;
+    width: 100px;
+    border: none;
+    color: white;
+    border-radius: 15px;
+    margin-left: 15px;
+    background-color: #867200;
+}
+
+#search {
+    width: 250px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    padding: 10px 20px;
+    font-size: 18px;
+}
+
+
+.boulangerie {
+    display: flex;
+    height: 100px;
+    width: 200px;
+    margin: 20px;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    border: 4px solid #867200;
+}
+
+.boulangerie h2 {
+    text-align: center;
+}
+
+#boulangeries {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
